Fix BASE URL link

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 URL=mongodb+srv://gowdabharatha23:gGe3FLOnT0RkfVOR@cluster0.ijbpk.mongodb.net/fileshare?retryWrites=true&w=majority
+BASE_URL=https://fileshare-tau.vercel.app
+
